--- a/src/components/WeaponModal.module.css
+++ b/src/components/WeaponModal.module.css
@@ -95,7 +95,7 @@ dialog.modal {
         }
 
         & .column-info-header-title-overboost {
-          flex-wrap: nowrap;
+          white-space: nowrap;
         }
 
         & .column-info-header-title-level {
@@ -307,7 +307,7 @@ dialog.modal {
           outline: 2px solid var(--border-color);
           outline-offset: -7px;
           color: white;
-          line-height: 1.5rem;
+          line-height: 1.25rem;
           font-size: 1.25rem;
   
           & img {
